[gd_scene load_steps=8 format=3 uid="uid://bgavp51io7dp5"]

[ext_resource type="Theme" uid="uid://cimcgg33xdiyd" path="res://Themes/main.theme" id="1_08v46"]
[ext_resource type="Script" path="res://Menus/health.gd" id="2_djys3"]
[ext_resource type="Texture2D" uid="uid://red3to85khip" path="res://Icons/Levels/exclamation1.png" id="2_t3fmi"]
[ext_resource type="StyleBox" uid="uid://c4lrh7ayx0rtf" path="res://Themes/Styleboxes/inverse_transparent.stylebox" id="3_wu32e"]
[ext_resource type="FontFile" uid="uid://c4o05i4pa21je" path="res://Themes/Fonts/InriaSans-Regular.otf" id="4_vx388"]
[ext_resource type="StyleBox" uid="uid://bnorgblhsf46e" path="res://Themes/Styleboxes/inverse.stylebox" id="5_csopd"]
[ext_resource type="StyleBox" uid="uid://ev2mbtfnm0jq" path="res://Themes/Styleboxes/default.stylebox" id="6_gsavo"]

[node name="Health" type="Control"]
custom_minimum_size = Vector2(540, 450)
layout_mode = 3
anchors_preset = 0
offset_top = 140.0
offset_right = 540.0
offset_bottom = 590.0
theme = ExtResource("1_08v46")
script = ExtResource("2_djys3")

[node name="Hydrate" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 63.0
offset_top = 178.0
offset_right = 113.0
offset_bottom = 228.0
texture_normal = ExtResource("2_t3fmi")

[node name="Wound" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 210.0
offset_top = 283.0
offset_right = 260.0
offset_bottom = 333.0
texture_normal = ExtResource("2_t3fmi")

[node name="Sanitise" type="TextureButton" parent="."]
visible = false
layout_mode = 0
offset_left = 115.0
offset_top = 287.0
offset_right = 165.0
offset_bottom = 337.0
texture_normal = ExtResource("2_t3fmi")

[node name="Infection" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 281.0
offset_top = 218.0
offset_right = 331.0
offset_bottom = 268.0
texture_normal = ExtResource("2_t3fmi")

[node name="Treatment" type="TextureButton" parent="."]
visible = false
layout_mode = 0
offset_left = 148.0
offset_top = 320.0
offset_right = 198.0
offset_bottom = 370.0
texture_normal = ExtResource("2_t3fmi")

[node name="HealthMenu" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(540, 450)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = ExtResource("3_wu32e")

[node name="VBoxContainer" type="VBoxContainer" parent="HealthMenu"]
custom_minimum_size = Vector2(520, 350)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -175.0
offset_right = 260.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Hydrate" type="VBoxContainer" parent="HealthMenu/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 15

[node name="Description" type="Label" parent="HealthMenu/VBoxContainer/Hydrate"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_fonts/font = ExtResource("4_vx388")
theme_override_font_sizes/font_size = 26
text = "Hydration is important regardless of situation."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Prompt" type="Label" parent="HealthMenu/VBoxContainer/Hydrate"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_font_sizes/font_size = 26
text = "What type of water should you drink?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ItemList" type="GridContainer" parent="HealthMenu/VBoxContainer/Hydrate"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="Drinking" type="CheckBox" parent="HealthMenu/VBoxContainer/Hydrate/ItemList"]
custom_minimum_size = Vector2(230, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.882353, 0.882353, 0.882353, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vx388")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("5_csopd")
theme_override_styles/pressed = ExtResource("6_gsavo")
text = "Drinking water"
alignment = 1

[node name="Flood" type="CheckBox" parent="HealthMenu/VBoxContainer/Hydrate/ItemList"]
custom_minimum_size = Vector2(230, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.882353, 0.882353, 0.882353, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vx388")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("5_csopd")
theme_override_styles/pressed = ExtResource("6_gsavo")
text = "Flood water"
alignment = 1

[node name="Rain" type="CheckBox" parent="HealthMenu/VBoxContainer/Hydrate/ItemList"]
custom_minimum_size = Vector2(230, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.882353, 0.882353, 0.882353, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vx388")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("5_csopd")
theme_override_styles/pressed = ExtResource("6_gsavo")
text = "Rain water"
alignment = 1

[node name="Tap" type="CheckBox" parent="HealthMenu/VBoxContainer/Hydrate/ItemList"]
custom_minimum_size = Vector2(230, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.882353, 0.882353, 0.882353, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vx388")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("5_csopd")
theme_override_styles/pressed = ExtResource("6_gsavo")
text = "Tap water"
alignment = 1

[node name="Wound" type="VBoxContainer" parent="HealthMenu/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 15

[node name="Description" type="Label" parent="HealthMenu/VBoxContainer/Wound"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_fonts/font = ExtResource("4_vx388")
theme_override_font_sizes/font_size = 26
text = "Walking around during and after the flood can cause wounds."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Prompt" type="Label" parent="HealthMenu/VBoxContainer/Wound"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_font_sizes/font_size = 26
text = "Which body parts usually got wounded during a flood?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ItemList" type="GridContainer" parent="HealthMenu/VBoxContainer/Wound"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="Arm" type="CheckBox" parent="HealthMenu/VBoxContainer/Wound/ItemList"]
custom_minimum_size = Vector2(230, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.882353, 0.882353, 0.882353, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vx388")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("5_csopd")
theme_override_styles/pressed = ExtResource("6_gsavo")
text = "Arms"
alignment = 1

[node name="Hair" type="CheckBox" parent="HealthMenu/VBoxContainer/Wound/ItemList"]
custom_minimum_size = Vector2(230, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.882353, 0.882353, 0.882353, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vx388")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("5_csopd")
theme_override_styles/pressed = ExtResource("6_gsavo")
text = "Hair"
alignment = 1

[node name="Leg" type="CheckBox" parent="HealthMenu/VBoxContainer/Wound/ItemList"]
custom_minimum_size = Vector2(230, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.882353, 0.882353, 0.882353, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vx388")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("5_csopd")
theme_override_styles/pressed = ExtResource("6_gsavo")
text = "Legs"
alignment = 1

[node name="Neck" type="CheckBox" parent="HealthMenu/VBoxContainer/Wound/ItemList"]
custom_minimum_size = Vector2(230, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.882353, 0.882353, 0.882353, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vx388")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("5_csopd")
theme_override_styles/pressed = ExtResource("6_gsavo")
text = "Neck"
alignment = 1

[node name="Infection" type="VBoxContainer" parent="HealthMenu/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 15

[node name="Description" type="Label" parent="HealthMenu/VBoxContainer/Infection"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_fonts/font = ExtResource("4_vx388")
theme_override_font_sizes/font_size = 26
text = "Flood water carries many disease and infection vectors."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Prompt" type="Label" parent="HealthMenu/VBoxContainer/Infection"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_font_sizes/font_size = 26
text = "What are common infections that happen during a flood?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ItemList" type="GridContainer" parent="HealthMenu/VBoxContainer/Infection"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="Cholera" type="CheckBox" parent="HealthMenu/VBoxContainer/Infection/ItemList"]
custom_minimum_size = Vector2(230, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.882353, 0.882353, 0.882353, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vx388")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("5_csopd")
theme_override_styles/pressed = ExtResource("6_gsavo")
text = "Cholera"
alignment = 1

[node name="Leptospirosis" type="CheckBox" parent="HealthMenu/VBoxContainer/Infection/ItemList"]
custom_minimum_size = Vector2(230, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.882353, 0.882353, 0.882353, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vx388")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("5_csopd")
theme_override_styles/pressed = ExtResource("6_gsavo")
text = "Leptospirosis"
alignment = 1

[node name="Malaria" type="CheckBox" parent="HealthMenu/VBoxContainer/Infection/ItemList"]
custom_minimum_size = Vector2(230, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.882353, 0.882353, 0.882353, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vx388")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("5_csopd")
theme_override_styles/pressed = ExtResource("6_gsavo")
text = "Malaria"
alignment = 1

[node name="Typhoid" type="CheckBox" parent="HealthMenu/VBoxContainer/Infection/ItemList"]
custom_minimum_size = Vector2(230, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.882353, 0.882353, 0.882353, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vx388")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("5_csopd")
theme_override_styles/pressed = ExtResource("6_gsavo")
text = "Typhoid fever"
alignment = 1

[node name="Sanitise" type="VBoxContainer" parent="HealthMenu/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 15

[node name="Description" type="Label" parent="HealthMenu/VBoxContainer/Sanitise"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_fonts/font = ExtResource("4_vx388")
theme_override_font_sizes/font_size = 26
text = "Before treating a wound, it is important to sanitise it."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Prompt" type="Label" parent="HealthMenu/VBoxContainer/Sanitise"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_font_sizes/font_size = 26
text = "How can we sanitise and clean a wound?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ItemList" type="GridContainer" parent="HealthMenu/VBoxContainer/Sanitise"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="Cloth" type="CheckBox" parent="HealthMenu/VBoxContainer/Sanitise/ItemList"]
custom_minimum_size = Vector2(230, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.882353, 0.882353, 0.882353, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vx388")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("5_csopd")
theme_override_styles/pressed = ExtResource("6_gsavo")
text = "Clean cloth"
alignment = 1

[node name="Iodine" type="CheckBox" parent="HealthMenu/VBoxContainer/Sanitise/ItemList"]
custom_minimum_size = Vector2(230, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.882353, 0.882353, 0.882353, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vx388")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("5_csopd")
theme_override_styles/pressed = ExtResource("6_gsavo")
text = "Iodine solution"
alignment = 1

[node name="Sanitiser" type="CheckBox" parent="HealthMenu/VBoxContainer/Sanitise/ItemList"]
custom_minimum_size = Vector2(230, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.882353, 0.882353, 0.882353, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vx388")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("5_csopd")
theme_override_styles/pressed = ExtResource("6_gsavo")
text = "Hand sanitiser"
alignment = 1

[node name="Water" type="CheckBox" parent="HealthMenu/VBoxContainer/Sanitise/ItemList"]
custom_minimum_size = Vector2(230, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.882353, 0.882353, 0.882353, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vx388")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("5_csopd")
theme_override_styles/pressed = ExtResource("6_gsavo")
text = "Clean water"
alignment = 1

[node name="Treatment" type="VBoxContainer" parent="HealthMenu/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 15

[node name="Description" type="Label" parent="HealthMenu/VBoxContainer/Treatment"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_fonts/font = ExtResource("4_vx388")
theme_override_font_sizes/font_size = 26
text = "If you suspect or contracted an infection, you must get treatment."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Prompt" type="Label" parent="HealthMenu/VBoxContainer/Treatment"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_font_sizes/font_size = 26
text = "What are the treatments available for infections?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ItemList" type="GridContainer" parent="HealthMenu/VBoxContainer/Treatment"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="Antibiotics" type="CheckBox" parent="HealthMenu/VBoxContainer/Treatment/ItemList"]
custom_minimum_size = Vector2(230, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.882353, 0.882353, 0.882353, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vx388")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("5_csopd")
theme_override_styles/pressed = ExtResource("6_gsavo")
text = "Antibiotics"
alignment = 1

[node name="IV" type="CheckBox" parent="HealthMenu/VBoxContainer/Treatment/ItemList"]
custom_minimum_size = Vector2(230, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.882353, 0.882353, 0.882353, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vx388")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("5_csopd")
theme_override_styles/pressed = ExtResource("6_gsavo")
text = "IV rehydration"
alignment = 1

[node name="Salt" type="CheckBox" parent="HealthMenu/VBoxContainer/Treatment/ItemList"]
custom_minimum_size = Vector2(230, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.882353, 0.882353, 0.882353, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vx388")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("5_csopd")
theme_override_styles/pressed = ExtResource("6_gsavo")
text = "Salt water"
alignment = 1

[node name="Steroid" type="CheckBox" parent="HealthMenu/VBoxContainer/Treatment/ItemList"]
custom_minimum_size = Vector2(230, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.882353, 0.882353, 0.882353, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vx388")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("5_csopd")
theme_override_styles/pressed = ExtResource("6_gsavo")
text = "Steroids"
alignment = 1

[node name="SubmitButton" type="Button" parent="HealthMenu/VBoxContainer"]
self_modulate = Color(1, 1, 0.5, 1)
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 26
text = "Submit"

[connection signal="pressed" from="HealthMenu/VBoxContainer/SubmitButton" to="." method="_on_submit_button_pressed"]
